fixed bg picture

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <body>
     <h1 class="title"> Frogger</h1>
     <div id="win">You win!!</div>
-    <canvas style="background: url('./img/background3.png')"></canvas>
+    <canvas style="background: url('./img/background3_edit.png')"></canvas>
     <div id="directions" class="directions">Use arrow keys to move. Don't get run over!</div>
     <button id="start" type="button" onclick="start()">START</button>
 
