--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <div class="logo" id="logo">
       <h1 id="title" class="title">Frogger</h1>
       <img src="img/Frogger_hyperarcade_art.png"/>
-      <div class="bubble me">I'm too young to die</div>
+      <div class="bubble me">I'm too young to die...</div>
     </div>
     <canvas style="background: url('./img/background3_edit.png')"></canvas>
     <div class="bottom">
